# cmake-tests

./: CMakeLists.txt
TestApp/: CMakeLists.txt  Info.plist  main.m  main.mm
TestFramework/: CMakeLists.txt  TestFramework.h  TestFramework.m
TestSharedLib/: CMakeLists.txt  TestSharedLib.h  TestSharedLib.m  TestSharedLib.mm
TestStaticLib/: CMakeLists.txt  TestStaticLib.h  TestStaticLib.m  TestStaticLib.mm
